@@ -50,7 +50,6 @@ double		azimuth = 0.0, elevation = 0.0;
 int		lightmodel = 0;		/* Select lighting model */
 int		rpt_overlap = 1;	/* report overlapping region names */
 int		default_background = 1; /* Default is black */
-int		rt_text_mode = 0;       /* Currently used by rtcheck and nirt */
 /***** end of sharing with viewing model *****/
 
 /***** variables shared with worker() ******/
@@ -563,7 +562,7 @@ int get_args( int argc, register char **argv )
 		register char	*cp = bu_optarg;
 		switch (*cp) {
 		    case 't':
-			rt_text_mode = 1;
+			output_is_binary = 0;
 			break;
 		    default:
 			fprintf(stderr, "ERROR: unknown option %c\n", *cp);
